mobile styling fix, spacing issue, formatting for mobile view

--- a/styles/style.css
+++ b/styles/style.css
@@ -902,7 +902,7 @@ a:hover{
 }
 .first-item p{
   text-align: center;
-  width:100%;
+  margin: 10px;
   font-family: Play-Regular;
   letter-spacing: 0px;
   color: black;
@@ -954,7 +954,7 @@ a:hover{
 }
 .second-item p{
   text-align: center;
-  width:100%;
+  margin: 8px;
   font-family: Play-Regular;
   letter-spacing: 0px;
   color: black;
@@ -1005,7 +1005,7 @@ a:hover{
 }
 .third-item p{
   text-align: center;
-  width:100%;
+  margin: 8px;
   font-family: Play-Regular;
   letter-spacing: 0px;
   color: black;
@@ -1078,6 +1078,7 @@ a:hover{
   .first-item p{
     text-align: left;
     order:0;
+    margin: 0;
     width:80%;
     font-family: Play-Regular;
     letter-spacing: 0px;
@@ -1133,6 +1134,7 @@ a:hover{
   .second-item p{
     text-align: left;
     order:0;
+    margin: 0;
     width:80%;
     font-family: Play-Regular;
     letter-spacing: 0px;
@@ -1188,6 +1190,7 @@ a:hover{
   .third-item p{
     text-align: left;
     order:0;
+    margin: 0;
     width:80%;
     font-family: Play-Regular;
     letter-spacing: 0px;
